2014-07-07  Simon Cook  <simon.cook@embecosm.com>

	* configure.ac: Make test for GCC headers using a C++ compiler instead
	of C.
	* configure: Regenerated.

2014-07-07  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extract.cpp: Added conditional includes for GCC
	4.9 and above.
	(mageec_featextract_exec): Replace FOR_EACH_BB with FOR_ALL_BB_FN for
	GCC 4.9 and above.
	(pass_data_mageec_featextract): Added for GCC 4.9 and above.
	(class mageec_featpass): Likewise.
	(make_mageec_pass): Likewise.
	(register_featextract): Update pass reference depending on GCC 4.9.

2014-07-07  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-callbacks.cpp (mageec_pass_gate): Use mageec_config
	map for configuration instead of larger set of globals.
	* gcc_plugin/gcc-plugin.cpp (parse_arguments): Likewise.
	* gcc_plugin/mageec-plugin.h (mageec_print_pass_info): Removed,
	replaced with mageec_config.
	(mageec_no_decision): Removed, replaced with mageec_config.
	(mageec_config): Added.

2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Add an install-exec-hook to symlink the library into the plugins dir.
	This allows "gcc -fplugin=mageec" to work.

	* gcc_plugin/Makefile.am: Added an install-exec-hook and a uninstall-
	    hook to add and remove symlinks to the mageec gcc plugin
	* gcc_plugin/Makefile.in: Regenerated

2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Make check fix for when not enabling python

	* testsuite/config/site.exp.in: Quote @PYTHON@ so if it is not defined
	    make check does not fail

2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Conditionally enable gcc_plugin tests and python tests based on
	--enable-XXX flags given to configure

	* testsuite/Makefile.am: Added automake conditional declarations for
	    the gcc_plugin and python tests
	* testsuite/Makefile.in: Regenerated

2014-04-07  Simon Cook  <simon.cook@embecosm.com>

	* configure.ac: Make output formatting of enable python and gcc